@@ -35,8 +35,10 @@ Forecasting (Evan Miller)
   method. It is a drop-in replacement for HWPREDICT, and is better suited for
   data whose seasonal variations grow or shrink in proportion to the average.
 
-* Due to the new aggregation function, we also get a new version of the
-  rrd file format.
+Incompatibility
+---------------
+* If you create an RRD with the new MHWPREDICT function, the resulting rrdfile will
+  be version 0004 and can only be used in rrdtool 1.3.
 
 Locale Independent Input
 ------------------------
